--- a/XAI/Base.lproj/Linkage_iPhone.storyboard
+++ b/XAI/Base.lproj/Linkage_iPhone.storyboard
@@ -47,6 +47,11 @@
                                 <rect key="frame" x="0.0" y="158" width="320" height="169"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
+                                    <view alpha="0.69999999999999996" contentMode="scaleToFill" id="T3a-9f-pLL">
+                                        <rect key="frame" x="0.0" y="89" width="320" height="1"/>
+                                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                        <color key="backgroundColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
+                                    </view>
                                     <view contentMode="scaleToFill" id="b08-Oa-kNV">
                                         <rect key="frame" x="0.0" y="3" width="320" height="36"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
