--- a/XAI/Base.lproj/Show_iPhone_Other.storyboard
+++ b/XAI/Base.lproj/Show_iPhone_Other.storyboard
@@ -347,7 +347,7 @@
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="0hP-V3-HZY" id="wLm-ib-ADU">
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="devHis_not.png" id="jnx-D8-SDq">
+                                                <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="devHis_not.png" id="jnx-D8-SDq">
                                                     <rect key="frame" x="10" y="12" width="6" height="6"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 </imageView>
@@ -406,8 +406,8 @@
         <image name="headImg.png" width="28" height="28"/>
         <image name="jiaohu_head.png" width="63" height="63"/>
         <image name="jiaohu_tbg.png" width="356" height="170"/>
-        <image name="qrcode_scan_cancel.png" width="195" height="42"/>
-        <image name="qrcode_scan_rec.png" width="195" height="195"/>
+        <image name="qrcode_scan_cancel.png" width="236" height="31"/>
+        <image name="qrcode_scan_rec.png" width="243" height="288"/>
         <image name="sex_man.png" width="78" height="28"/>
         <image name="sex_woman.png" width="78" height="28"/>
         <image name="useradd_cbg.png" width="246" height="115"/>
