--- a/XAI/Base.lproj/Link_Choose.xib
+++ b/XAI/Base.lproj/Link_Choose.xib
@@ -7,12 +7,13 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="XAILinkageChooseVC">
             <connections>
-                <outlet property="attr1Btn" destination="fBK-rp-5dW" id="g6D-Am-bfJ"/>
-                <outlet property="attr2Btn" destination="CgD-IL-4fq" id="POi-AH-aoB"/>
+                <outlet property="attrBtn" destination="TYQ-2o-l2b" id="mfR-HF-HQ7"/>
                 <outlet property="headImgV" destination="s0D-Mw-5db" id="tR4-iV-X28"/>
                 <outlet property="leftTableView" destination="QSF-z2-rcF" id="SXm-ja-jLN"/>
+                <outlet property="rightHeadView" destination="JRE-W8-ug0" id="qyq-lL-knh"/>
                 <outlet property="rightTableView" destination="8cx-7h-0UP" id="NQi-Or-Uct"/>
                 <outlet property="rightView" destination="Nri-TT-69m" id="wIp-UK-TCZ"/>
+                <outlet property="tipLab" destination="gq5-Po-nf7" id="S6t-iO-t13"/>
                 <outlet property="titleImgV" destination="uKR-CF-ccs" id="Xj5-fS-OpR"/>
             </connections>
         </placeholder>
@@ -21,11 +22,6 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" id="pXm-K0-GMb">
-                    <rect key="frame" x="91" y="0.0" width="1" height="568"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES"/>
-                    <color key="backgroundColor" red="0.0" green="0.59999999999999998" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                </view>
                 <view contentMode="scaleToFill" id="sRr-vg-Hwi">
                     <rect key="frame" x="0.0" y="0.0" width="320" height="150"/>
                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -45,42 +41,51 @@
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 </view>
-                <tableView opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="QSF-z2-rcF">
-                    <rect key="frame" x="0.0" y="150" width="100" height="418"/>
-                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                    <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                    <connections>
-                        <outlet property="dataSource" destination="-1" id="sQW-PR-fKb"/>
-                        <outlet property="delegate" destination="-1" id="10u-n8-yr5"/>
-                    </connections>
-                </tableView>
+                <view alpha="0.80000000000000004" contentMode="scaleToFill" id="pXm-K0-GMb" userLabel="line">
+                    <rect key="frame" x="0.0" y="507" width="320" height="1"/>
+                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                    <color key="backgroundColor" white="0.59999999999999998" alpha="1" colorSpace="calibratedWhite"/>
+                </view>
                 <view contentMode="scaleToFill" id="Nri-TT-69m">
-                    <rect key="frame" x="100" y="150" width="220" height="418"/>
+                    <rect key="frame" x="0.0" y="150" width="320" height="353"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <subviews>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="CgD-IL-4fq">
-                            <rect key="frame" x="118" y="11" width="94" height="30"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
-                            <state key="normal" title="attr2btn">
-                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                            </state>
-                            <connections>
-                                <action selector="attr2BtnClick:" destination="-1" eventType="touchUpInside" id="x7B-oe-uSh"/>
-                            </connections>
-                        </button>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="fBK-rp-5dW">
-                            <rect key="frame" x="6" y="11" width="96" height="30"/>
+                        <view contentMode="scaleToFill" id="JRE-W8-ug0">
+                            <rect key="frame" x="0.0" y="0.0" width="320" height="61"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <state key="normal" title="attr1btn">
-                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                            </state>
-                            <connections>
-                                <action selector="attr1BtnClick:" destination="-1" eventType="touchUpInside" id="kUX-5h-lT8"/>
-                            </connections>
-                        </button>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="你已选择开关打开动作" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="gq5-Po-nf7">
+                                    <rect key="frame" x="51" y="10" width="218" height="21"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                    <color key="textColor" red="0.43529411759999997" green="0.4431372549" blue="0.47450980390000003" alpha="1" colorSpace="calibratedRGB"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="TYQ-2o-l2b">
+                                    <rect key="frame" x="143" y="35" width="34" height="17"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <color key="tintColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                    <state key="normal" backgroundImage="link_swi_close.png">
+                                        <color key="titleColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                    </state>
+                                    <state key="selected" backgroundImage="link_swi_open.png">
+                                        <color key="titleColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                    </state>
+                                    <connections>
+                                        <action selector="attrBtnClick:" destination="-1" eventType="touchUpInside" id="gnq-QS-Xnb"/>
+                                    </connections>
+                                </button>
+                                <view alpha="0.80000000000000004" contentMode="scaleToFill" id="Wx8-p0-EUL" userLabel="line">
+                                    <rect key="frame" x="0.0" y="60" width="320" height="1"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                                    <color key="backgroundColor" white="0.59999999999999998" alpha="1" colorSpace="calibratedWhite"/>
+                                </view>
+                            </subviews>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        </view>
                         <tableView opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="8cx-7h-0UP">
-                            <rect key="frame" x="0.0" y="49" width="221" height="369"/>
+                            <rect key="frame" x="0.0" y="65" width="321" height="288"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -90,8 +95,18 @@
                             </connections>
                         </tableView>
                     </subviews>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                 </view>
+                <tableView opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="QSF-z2-rcF">
+                    <rect key="frame" x="0.0" y="508" width="60" height="60"/>
+                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    <connections>
+                        <outlet property="dataSource" destination="-1" id="sQW-PR-fKb"/>
+                        <outlet property="delegate" destination="-1" id="10u-n8-yr5"/>
+                    </connections>
+                </tableView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
         </view>
@@ -99,6 +114,8 @@
     <resources>
         <image name="link_cond_head.png" width="91" height="91"/>
         <image name="link_cond_tiltle.png" width="124" height="30"/>
+        <image name="link_swi_close.png" width="34" height="17"/>
+        <image name="link_swi_open.png" width="34" height="17"/>
         <image name="link_tbg.png" width="356" height="191"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
