--- a/XAI/Base.lproj/LinkageTime.xib
+++ b/XAI/Base.lproj/LinkageTime.xib
@@ -8,22 +8,131 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" userLabel="LinkageTime" customClass="XAILinkageTime">
-            <rect key="frame" x="0.0" y="0.0" width="330" height="268"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="300"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="time" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="G6Z-2v-6g9">
-                    <rect key="frame" x="0.0" y="18" width="330" height="180"/>
+                <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fop-I5-ZGz">
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="60"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jZo-6e-Kd6" userLabel="line">
+                            <rect key="frame" x="0.0" y="58" width="320" height="1"/>
+                            <color key="backgroundColor" red="0.43529411759999997" green="0.4431372549" blue="0.47450980390000003" alpha="1" colorSpace="calibratedRGB"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="1" id="oJ0-qe-19h"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <color key="textColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="你已添加延时动作" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Iuj-4u-atn">
+                            <rect key="frame" x="0.0" y="20" width="320" height="21"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="21" id="qzX-rg-kCs"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <color key="textColor" white="0.59999999999999998" alpha="1" colorSpace="calibratedWhite"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                    </subviews>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="180" id="Wo5-b3-JXD"/>
+                        <constraint firstAttribute="height" constant="60" id="A0e-3t-9hn"/>
+                        <constraint firstItem="jZo-6e-Kd6" firstAttribute="leading" secondItem="fop-I5-ZGz" secondAttribute="leading" id="HUo-Dz-LQ4"/>
+                        <constraint firstAttribute="trailing" secondItem="Iuj-4u-atn" secondAttribute="trailing" id="YTT-tW-2Sf"/>
+                        <constraint firstAttribute="trailing" secondItem="jZo-6e-Kd6" secondAttribute="trailing" id="a1J-Tz-NJq"/>
+                        <constraint firstItem="Iuj-4u-atn" firstAttribute="leading" secondItem="fop-I5-ZGz" secondAttribute="leading" id="d4U-yi-g8V"/>
+                        <constraint firstItem="jZo-6e-Kd6" firstAttribute="top" secondItem="Iuj-4u-atn" secondAttribute="bottom" constant="17" id="efQ-cB-dXR"/>
+                        <constraint firstAttribute="bottom" secondItem="jZo-6e-Kd6" secondAttribute="bottom" constant="1" id="f0f-AI-fxD"/>
                     </constraints>
+                </view>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZPb-Ea-P5c">
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="60"/>
+                    <subviews>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="L6X-2H-UbN">
+                            <rect key="frame" x="30" y="0.0" width="90" height="30"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="90" id="DhP-L8-W5f"/>
+                                <constraint firstAttribute="height" constant="30" id="n5y-eI-zGY"/>
+                            </constraints>
+                            <state key="normal" title="预设触发时间">
+                                <color key="titleColor" red="0.43529411759999997" green="0.4431372549" blue="0.47450980390000003" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                            </state>
+                            <state key="selected">
+                                <color key="titleColor" red="0.0" green="0.58823529409999997" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </state>
+                            <connections>
+                                <action selector="oneDayClick:" destination="iN0-l3-epB" eventType="touchUpInside" id="3Xy-dV-BSJ"/>
+                            </connections>
+                        </button>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nyx-LM-OsI">
+                            <rect key="frame" x="200" y="0.0" width="90" height="30"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="30" id="8Yy-Sn-hne"/>
+                                <constraint firstAttribute="width" constant="90" id="kOd-cU-Qdd"/>
+                            </constraints>
+                            <state key="normal" title="每天触发时间">
+                                <color key="titleColor" red="0.43529411759999997" green="0.4431372549" blue="0.47450980390000003" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                            </state>
+                            <state key="selected">
+                                <color key="titleColor" red="0.0" green="0.58823529409999997" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </state>
+                            <connections>
+                                <action selector="everyDayClick:" destination="iN0-l3-epB" eventType="touchUpInside" id="29E-8p-pYK"/>
+                            </connections>
+                        </button>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hZW-pn-QhC" userLabel="line">
+                            <rect key="frame" x="0.0" y="29" width="320" height="1"/>
+                            <color key="backgroundColor" red="0.43529411759999997" green="0.4431372549" blue="0.47450980390000003" alpha="1" colorSpace="calibratedRGB"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="1" id="Zmw-Sg-ZcA"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <color key="textColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="你已选择什么时候触发" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9kV-vj-jIR">
+                            <rect key="frame" x="0.0" y="38" width="320" height="21"/>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="21" id="kFL-zh-LkL"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <color key="textColor" red="0.43529411759999997" green="0.4431372549" blue="0.47450980390000003" alpha="1" colorSpace="calibratedRGB"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                    </subviews>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    <color key="tintColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstItem="hZW-pn-QhC" firstAttribute="top" secondItem="ZPb-Ea-P5c" secondAttribute="top" constant="29" id="6TC-HA-d9p"/>
+                        <constraint firstItem="nyx-LM-OsI" firstAttribute="top" secondItem="ZPb-Ea-P5c" secondAttribute="top" id="6hN-eN-C0Q"/>
+                        <constraint firstAttribute="trailing" secondItem="hZW-pn-QhC" secondAttribute="trailing" id="NRY-VX-OZw"/>
+                        <constraint firstAttribute="height" constant="60" id="Tqj-OW-t1J"/>
+                        <constraint firstAttribute="trailing" secondItem="nyx-LM-OsI" secondAttribute="trailing" constant="30" id="Xp2-ip-jLb"/>
+                        <constraint firstItem="L6X-2H-UbN" firstAttribute="leading" secondItem="ZPb-Ea-P5c" secondAttribute="leading" constant="30" id="afr-vJ-Jpw"/>
+                        <constraint firstItem="9kV-vj-jIR" firstAttribute="leading" secondItem="ZPb-Ea-P5c" secondAttribute="leading" id="j4Y-dy-9TP"/>
+                        <constraint firstAttribute="bottom" secondItem="9kV-vj-jIR" secondAttribute="bottom" constant="1" id="k0E-tu-dZ8"/>
+                        <constraint firstAttribute="trailing" secondItem="9kV-vj-jIR" secondAttribute="trailing" id="rj3-KH-msF"/>
+                        <constraint firstItem="hZW-pn-QhC" firstAttribute="leading" secondItem="ZPb-Ea-P5c" secondAttribute="leading" id="uTI-VT-8fP"/>
+                        <constraint firstItem="L6X-2H-UbN" firstAttribute="top" secondItem="ZPb-Ea-P5c" secondAttribute="top" id="vL3-SG-b7X"/>
+                    </constraints>
+                </view>
+                <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="time" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="G6Z-2v-6g9">
+                    <rect key="frame" x="0.0" y="70" width="320" height="162"/>
                     <date key="date" timeIntervalSinceReferenceDate="437019499.57942599">
                         <!--2014-11-07 02:18:19 +0000-->
                     </date>
+                    <connections>
+                        <action selector="valueChange:" destination="iN0-l3-epB" eventType="valueChanged" id="RHu-rI-nsN"/>
+                    </connections>
                 </datePicker>
                 <button opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="749" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Srb-kE-PyP" userLabel="left">
-                    <rect key="frame" x="102" y="225" width="127" height="33"/>
+                    <rect key="frame" x="43" y="258" width="234" height="32"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="127" id="aXE-ze-l8Y"/>
+                        <constraint firstAttribute="height" constant="32" id="KaT-CY-mDu"/>
+                        <constraint firstAttribute="width" constant="234" id="LRV-BV-J6g"/>
                     </constraints>
                     <state key="normal" image="linkage_alert_ok_nor.png">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -33,12 +142,18 @@
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstAttribute="centerX" secondItem="Srb-kE-PyP" secondAttribute="centerX" id="PbJ-RL-LxM"/>
-                <constraint firstAttribute="bottom" secondItem="Srb-kE-PyP" secondAttribute="bottom" constant="10" id="TKH-tm-CAj"/>
-                <constraint firstAttribute="trailing" secondItem="G6Z-2v-6g9" secondAttribute="trailing" id="a9B-0U-KiH"/>
-                <constraint firstItem="G6Z-2v-6g9" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="18" id="h2w-zZ-oZQ"/>
-                <constraint firstItem="Srb-kE-PyP" firstAttribute="top" secondItem="G6Z-2v-6g9" secondAttribute="bottom" constant="27" id="oOB-hn-NGC"/>
-                <constraint firstItem="G6Z-2v-6g9" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="oi3-Uy-Mq9"/>
+                <constraint firstItem="Srb-kE-PyP" firstAttribute="top" secondItem="G6Z-2v-6g9" secondAttribute="bottom" constant="20" id="7Z3-ok-qDZ"/>
+                <constraint firstItem="fop-I5-ZGz" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="9KN-IG-j6W"/>
+                <constraint firstAttribute="trailing" secondItem="fop-I5-ZGz" secondAttribute="trailing" id="Hdc-Jd-7th"/>
+                <constraint firstItem="fop-I5-ZGz" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="IOl-50-2we"/>
+                <constraint firstAttribute="trailing" secondItem="G6Z-2v-6g9" secondAttribute="trailing" id="U3g-va-bgC"/>
+                <constraint firstAttribute="centerX" secondItem="Srb-kE-PyP" secondAttribute="centerX" id="VSA-wB-uHm"/>
+                <constraint firstItem="G6Z-2v-6g9" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="Wa3-dw-ZaT"/>
+                <constraint firstItem="G6Z-2v-6g9" firstAttribute="top" secondItem="ZPb-Ea-P5c" secondAttribute="bottom" constant="4" id="fhs-JK-Twg"/>
+                <constraint firstItem="ZPb-Ea-P5c" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="hmV-1W-Xan"/>
+                <constraint firstItem="ZPb-Ea-P5c" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="iDg-7q-mPv"/>
+                <constraint firstAttribute="trailing" secondItem="ZPb-Ea-P5c" secondAttribute="trailing" id="keZ-Tw-gRP"/>
+                <constraint firstAttribute="bottom" secondItem="Srb-kE-PyP" secondAttribute="bottom" constant="10" id="ric-dP-BTK"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <nil key="simulatedTopBarMetrics"/>
@@ -46,13 +161,19 @@
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
                 <outlet property="dataPicker" destination="G6Z-2v-6g9" id="BRJ-Cs-J2r"/>
+                <outlet property="dingshiTipLab" destination="9kV-vj-jIR" id="oJp-6W-nCq"/>
+                <outlet property="dingshiView" destination="ZPb-Ea-P5c" id="GUL-b9-Oth"/>
+                <outlet property="everyDayBtn" destination="nyx-LM-OsI" id="v15-d8-xlb"/>
                 <outlet property="okBtn" destination="Srb-kE-PyP" id="lU8-A9-G98"/>
+                <outlet property="oneDayBtn" destination="L6X-2H-UbN" id="icH-HW-fcx"/>
+                <outlet property="yanshiTipLab" destination="Iuj-4u-atn" id="yym-2z-piL"/>
+                <outlet property="yanshiView" destination="fop-I5-ZGz" id="8MD-7B-sFP"/>
             </connections>
-            <point key="canvasLocation" x="282" y="91"/>
+            <point key="canvasLocation" x="300" y="116"/>
         </view>
     </objects>
     <resources>
-        <image name="linkage_alert_ok_nor.png" width="92" height="36"/>
-        <image name="linkage_alert_ok_sel.png" width="91" height="36"/>
+        <image name="linkage_alert_ok_nor.png" width="234" height="32"/>
+        <image name="linkage_alert_ok_sel.png" width="234" height="32"/>
     </resources>
 </document>
